<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.1</version>
		<relativePath/>
	</parent>

	<groupId>dev.joopie</groupId>
	<artifactId>jambot</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>jambot</name>
	<description>Jambox bot for Discord</description>

	<properties>
		<java.version>21</java.version>
		<sonar.projectKey>PiekJ_jambot</sonar.projectKey>
		<sonar.organization>piekj</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
	</properties>

	<profiles>
		<profile>
			<id>mysql</id>
			<dependencies>
				<dependency>
					<groupId>mysql</groupId>
					<artifactId>mysql-connector-java</artifactId>
					<version>8.0.33</version>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<id>mariadb</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<dependencies>
				<dependency>
					<groupId>org.mariadb.jdbc</groupId>
					<artifactId>mariadb-java-client</artifactId>
					<version>3.1.3</version>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<id>postgresql</id>
			<dependencies>
				<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
				<dependency>
					<groupId>org.postgresql</groupId>
					<artifactId>postgresql</artifactId>
					<version>42.7.3</version>
				</dependency>
			</dependencies>
		</profile>
	</profiles>

	<dependencies>
		<!-- Spring Boot -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>

		<!-- Telemetry -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<!-- Application Specific -->
		<dependency>
			<groupId>dev.arbjerg</groupId>
			<artifactId>lavaplayer</artifactId>
			<version>2.2.1</version>
		</dependency>
		<dependency>
			<groupId>dev.lavalink.youtube</groupId>
			<artifactId>v2</artifactId>
			<version>1.4.0</version>
		</dependency>
		<dependency>
			<groupId>net.dv8tion</groupId>
			<artifactId>JDA</artifactId>
			<version>5.0.0</version>
		</dependency>
		<dependency>
			<groupId>se.michaelthelin.spotify</groupId>
			<artifactId>spotify-web-api-java</artifactId>
			<version>8.4.0</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<!-- Liquibase -->
		<dependency>
			<groupId>org.liquibase</groupId>
			<artifactId>liquibase-core</artifactId>
			<version>4.20.0</version>
		</dependency>

		<!-- Test -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Source Generators -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
	</dependencies>

	<repositories>
		<repository>
			<id>maven2</id>
			<name>Maven2 Central</name>
			<url>https://repo.maven.apache.org/maven2</url>
		</repository>
		<repository>
			<id>jitpack</id>
			<url>https://jitpack.io</url>
			<!-- Needed for the following dependencies:
                    - com.github.walkyst.JAADec-fork:jaadec-ext-aac
                    - com.github.walkyst:ibxm-fork
            -->
		</repository>
		<repository>
			<id>lavalink</id>
			<url>https://maven.lavalink.dev/releases</url>
		</repository>
	</repositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
